Completed portfolio and object array translation

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -10,5 +10,87 @@
     "librerias": "Librerias y frameworks",
     "diseño": "Diseño",
     "title-project": "Estos son mis últimos proyectos",
-    "sub-project": "Trabajé en varios proyectos personales para mejorar mis habilidades y poner en práctica lo que aprendí en la escuela.<br/> Me gusta trabajar en **proyectos desafiantes** que me permitan aplicar mis conocimientos y habilidades, y estoy comprometido a proporcionar **soluciones creativas e innovadoras** para cualquier problema que se presente. "
+    "sub-project": "Trabajé en varios proyectos personales para mejorar mis habilidades y poner en práctica lo que aprendí en la escuela. Me gusta trabajar en **proyectos desafiantes** que me permitan aplicar mis conocimientos y habilidades, y estoy comprometido a proporcionar **soluciones creativas e innovadoras** para cualquier problema que se presente. ",
+    "title-exp": "Estos proyectos me permitieron ganar experiencia en",
+    "experience.teamwork": "Trabajo en equipo",
+    "experience.responsabilities": "Compartir responsabilidades",
+    "experience.task": "Desarrollar tareas con un objetivo y un plazo determinado",
+    "experience.metodologies": "Metodologías ágiles (scrum)",
+    "footer-title": "Contactame en mis redes",
+    "p-footer": "Si estás buscando a un desarrollador web front-end junior apasionado y motivado, por favor no dudes en contactarme. <br/> Me encantaría discutir tus proyectos y cómo podemos trabajar juntos para crear experiencias de usuario excepcionales para tu sitio web.",
+    "bsz-title": "Llevando alegría a tu día a día",
+    "bsz-description": "Estoy emocionado de compartirles mi último proyecto, un ecommerce desarrollado completamente en React. Este proyecto se enfoca principalmente en el Front-end y el diseño, por lo que no cuenta con una sección de Back-end.",
+    "bsz-button1": "Visita la tienda",
+    "bsz-tools": "Este proyecto fue creado exclusivamente con ReactJS, Bootstrap 5 y Sass.",
+    "bsz-title2": "Conocé lo mejor de mi proyecto ",
+    "bsz.develop": "Está desarrollada completamente en React, demostrando mi habilidad en esta popular biblioteca de frontend.",
+    "bsz.interface": "Tiene una interfaz de usuario simple e intuitiva, con 20 productos mostrados en la página y enlaces clickables a información más detallada sobre cada producto.",
+    "bsz.responsive": "Es completamente responsiva, asegurando que los usuarios puedan acceder y navegar por el sitio web de manera óptima en cualquier dispositivo.",
+    "bsz.design": "Utiliza componentes de Bootstrap y SASS para crear un diseño personalizado y visualmente atractivo.",
+    "bsz.sass": "Utilizo SCSS, para aprovechar el poder de las variables y el anidamiento, lo que permitió un estilo más eficiente y organizado.",
+    "walletfy-title": "El aliado de tu bolsillo",
+    "walletfy-description": "Walletfy es una aplicación de finanzas personales. El objetivo es ayudar al usuario en la organización de sus gastos. Ademas, buscamos capacitar al usuario con contenido financiero como consejos, cuestionarios, un glosario de términos, para que nuestros clientes adopten una conducta financiera y puedan tomar las mejores desiciones.",
+    "walletfy-button": "Probá la app",
+    "walletfy-tools": "Walletfy fue desarrollada con **HTML5**, **CSS3**, **JavaScript**, **React.js**, **Api's**, **Firebase**, **Material UI** y **Bootstrap**.",
+    "walletfy-title2": "¡Echale un vistazo a la app!",
+    "walletfy-title3": "Funcionalidades",
+    "walletfy.movements": "Seguimiento de todos tus movimientos",
+    "walletfy.graphics": "Gráficos detallados",
+    "walletfy.education": "Capacitación en el mundo de las finanzas",
+    "walletfy.cuestionaries": "Cuestionarios",
+    "walletfy.news": "Noticias y novedades del mundo financiero",
+    "walletfy.criptos": "Seguimiento del mercado de criptomonedas",
+    "walletfy.stock": "Seguimiento de la bolsa de valores",
+    "kyber-title": "Sables personalizados",
+    "kyber-description": "Kyber es una tienda digital que se dedica a la venta de réplicas de sables de luz de star wars.",
+    "kyber-button1": "Explora el Github del proyecto",
+    "kyber-button2": "Mira el PDF",
+    "kyber-tools": "Este proyecto es un ecommerce programado en PHP Procedural.",
+    "kyber-title2": "Requisitos que cumplí",
+    "kyber.1": "El DER de la base de datos y su código SQL de creación e inserción de datos.",
+    "kyber.2": "La web debe conectarse a esa base de datos",
+    "kyber.3": "Uso de las funciones nativas de php require e include para el manejo de plantillas.",
+    "kyber.4": "Verificación de todos los datos recibidos por GET y POST desde php.",
+    "kyber.5": "El CRUD (Create, Read, Update & Delete) de una tabla de la base de datos (en el panel).",
+    "kyber.6": "El carrito funcional, es decir, elegir un producto/servicio, agregarlo al carrito, visualizar el total y “pagar”. Se recuerda que no hay pasarela de pago, solo la simulación del envío de datos de pago.",
+    "kyber.7": "Solo el usuario registrado (no admin) podrá realizar la compra/contratación del producto/servicio.",
+    "kyber.8": "Login y verificación de usuario admin al panel.",
+    "kyber.9": "Registro de usuarios.",
+    "kyber.10": "Tener bien validados los ID que se piden en el ver detalle, de forma tal que si se pide un registro inexistente muestre un mensaje de error apropiado",
+    "kyber.11": "Que el usuario registrado pueda interactuar con los datos del SQL.",
+    "kyber.12": "Todo ABM debe mostrar un mensaje indicando si se realizó o no la operación.",
+    "kyber.13": "Upload de archivos.",
+    "kyber.14": "Definir el tipo de dato más óptimo de cada campo del SQL.",
+    "kyber.15": "Tener bien definidos los campos UNIQUE y NOT NULL del SQL",
+    "blueocean-title": "Cuidemos nuestro planeta",
+    "blueocean-description": "BlueOcean es una PWA informativa sobre la contaminacion del agua.",
+    "blueocean-button": "Visitá la web",
+    "blueocean-tools": "El objetivo de este proyecto es la creación de una PWA realizada con HMTL, CSS y Vue.js 2.6.",
+    "blueocean-title2": "Requisitos que cumplí",
+    "blueocean.1": "Debe tener un ABM para que el usuario pueda manipular datos.",
+    "blueocean.2": "Uso de la Api LocalStorage de HTML5, para darle la posibilidad al usuario manipular datos (guardar, borrar, actualizar, etc). Por lo tanto, la aplicación tiene que ofrecer las mismas funcionalidades al usuario si tiene o no tiene red para interactuar con la misma.",
+    "blueocean.3": "Debe poseer como mínimo 4 vínculos navegables. Representando el contenido de cada template de los componentes dentro de router-view.",
+    "blueocean.4": "El diseño de la aplicación debe reflejar un estilo propio, personalizado acorde al producto.",
+    "blueocean.5": "Archivo de configuración manifest con los datos necesarios para la configuración de la app. (icons, display, orientation, start_url, name etc.). Tanto el icono como el splash deben ser representativos de la app en cuestión.",
+    "blueocean.6": "Por medio del manifest se debe poder instalar y brindarle al usuario la mejor experiencia posible.",
+    "blueocean.7": "El Service worker debe permitirnos configurar el comportamiento de la app y aprovechar su ciclo de vida para realizar el cache de recursos.",
+    "thorkey-title": "La música comienza cuando las palabras acaban",
+    "thorkey-description": "Thorkey es un E-commerce que se dedica a la venta de instrumentos musicales.",
+    "thorkey-button": "Mira el PDF",
+    "thorkey-tools": "Este proyecto fue creado exclusivamente con Wordpress y plugins como WooCommerce y Mercado Pago.",
+    "thorkey-title2": "Tema",
+    "thorkey-title3": "Plugins",
+    "thorkey-title4": "Configuraciones del sitio",
+    "thorkey.1": "Para configurarlo tuvimos que contratar un hosting y un dominio, el dominio lo contratamos a través de “DonWeb”, luego el hosting se lo contratamos a “Neolo”.",
+    "thorkey.2": "Luego de enlazar el dominio con el hosting procedimos a instalar WorldPress a través de 'Neolo'.",
+    "thorkey.3": "Teniendo WorldPress instalado lo siguiente que hicimos fue buscar un theme para nuestra página, el cual nos decidimos con el tema 'Shop Zita'.",
+    "thorkey.4": "Luego en el trayecto de realizar el trabajo fuimos viendo que en algunas situaciones necesitábamos la ayuda de plugins externos para poder realizar otro tipo de acciones para la web, como por ejemplo en el momento de realizar el formulario de contacto utilizamos el pluginWPForms Lite ya que el que venía por defecto con el tema no era posible editarlo.",
+    "thorkey.5": "Por otra parte, al querer realizar la landing recurrimos al PluginOpsLanding Page Builder este contiene varios diseños de landing page, permitiéndonos cambiar los datos y las estructuras a nuestro gusto.",
+    "thorkey.6": "Hablando de plugins, para realizar toda la parte de configuración de ventas utilizamos los plugins de MailchimpforWooCommerce, WooCommerceServices, WooCommerce, estos fueron muy útiles en el momento de configuras las formas de pago y en todo lo relacionado con las ventas.",
+    "thorkey.7": "Para la parte de seguridad utilizamos el plugin Really Simple SSL, más que nada lo utilizamos para tener más seguridad en nuestra pagina, pero también lo utilizamos para que este activo el SSL, ya que sin este no podíamos utilizar las funciones de MercadoPago",
+    "thorkey-title5": "Expectativas del sitio",
+    "thorkey-p1": "Hablando del Theme elegido, podemos decir que lo **“exprimimos” al máximo** ya que utilizamos todas sus funciones y estamos muy satisfechos ya que este es muy completo. ",
+    "thorkey-p2": "En nuestra página **aplicamos distintos tipos de secciones de productos a vender,** como por ejemplo distintas categorías de piano y guitarras, teniendo así un **amplio catalogo de productos** a ofrecer a nuestros clientes. ",
+    "thorkey-p3": "Las funciones que esperamos de nuestro sitio es que sea un **ecommerce cómodo para la gente,** cumpliendo todos los deseos de nuestros clientes **ofreciéndoles lo mejor en el momento de realizar compras de instrumentos.**"
+
 }
