Responsive parragraphs, titles and imgs

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,7 +28,7 @@
     },
     "footer":{
         "title": "Get in touch with me",
-        "p": "If you're looking for a passionate and motivated junior front-end web developer, please don't hesitate to reach out. I would love to discuss your projects and how we can work together to create exceptional user experiences for your website."
+        "p": "If you're looking for a passionate and motivated junior front-end web developer, please don't hesitate to reach out."
     },
     "bsz":{
         "title": "Bringing joy to your everyday life",
