Added responsive pills to all the projects

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -28,7 +28,7 @@
     },
     "footer":{
         "title": "Contactame en mis redes",
-        "p": "Si estás buscando a un desarrollador web front-end junior apasionado y motivado, por favor no dudes en contactarme."
+        "p": "Si estás buscando a un desarrollador front-end junior apasionado y motivado, por favor no dudes en contactarme."
     },
     "bsz":{
         "title": "Llevando alegría a tu día a día",
