--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,7 +8,8 @@
         "p1": "I am 23 years old and a passionate **Front-End Developer Jr** with a keen interest in web development and creating **unique and engaging user experiences.** While I am new to the industry, I have a solid foundation in HTML, CSS, and JavaScript, and I am excited to continue learning and growing in my career as a developer.",
         "p2": "I am a **dedicated, responsible, and collaborative** worker, who thrives in a team environment and easily adapts to any work setting. I am **motivated** and always seeking to improve my skills and expand my knowledge of the latest technologies and trends in the web development industry.",
         "p3": "I am excited to embark on my web development career and I am actively seeking opportunities to work on **exciting and challenging** projects that allow me to **grow and enhance my skills as a developer.**",
-        "cv": "Check out my CV"
+        "cv": "Check out my CV",
+        "link": "https://drive.google.com/file/d/1AeVnxfQO5xW1xjt6r8rOXAyQK9OVqrAK/view?usp=sharing"
     },
     "skills":{
         "title": "Skills",
