Backgrounds UI updated

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
     "intro": {
-        "intro": "Hi! I'm Cristian Bösz, welcome!",
+        "intro": "Hi! I'm Cristian Bösz",
         "subintro": "FullStack Developer Jr"
     },
     "about":{
