--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,6 +1,6 @@
 {
     "intro":{
-        "intro": "¡Hola! Soy Cristian Bösz, bienvenido/a!",
+        "intro": "¡Hola! Soy Cristian Bösz",
         "subintro": "Desarrollador FullStack JR"
     },
     "about":{
