Profile pic updated

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -5,7 +5,7 @@
     },
     "about":{
         "title": "Sobre mí",
-        "p1": "Tengo 23 años y soy un **Desarrollador Web Front-End Junior** apasionado por el desarrollo web y la creación de **experiencias de usuario únicas y atractivas**. Si bien soy nuevo en la industria, tengo una sólida formación en HTML, CSS y JavaScript, y estoy emocionado por seguir aprendiendo y creciendo en mi carrera como desarrollador.",
+        "p1": "Tengo 23 años y soy un **Desarrollador Web FullStack Junior** apasionado por el desarrollo web y la creación de **experiencias de usuario únicas y atractivas**. Si bien soy nuevo en la industria, tengo una sólida formación en HTML, CSS y JavaScript, y estoy emocionado por seguir aprendiendo y creciendo en mi carrera como desarrollador.",
         "p2": "Soy un trabajador **comprometido, responsable y colaborativo**, que trabaja bien en equipo y se adapta fácilmente a cualquier ambiente de trabajo. Estoy **motivado** y siempre busco mejorar mis habilidades y ampliar mi conocimiento sobre las últimas tecnologías y tendencias en la industria del desarrollo web.",
         "p3": "Estoy emocionado por comenzar mi carrera en el desarrollo web y estoy buscando oportunidades para trabajar en proyectos **emocionantes y desafiantes** que me permitan **crecer y mejorar como desarrollador**.",
         "cv": "Mira mi CV",
